--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,10 @@
         ". title new-log-wrapper"
         ". log-wrapper new-log-wrapper"
         ". . ."; 
-
     border:#274C77;
     border-width: 5px;
     border-style: solid;
+    justify-content: center;
 }
 
 .log-wrapper{
@@ -41,13 +41,13 @@
     padding-left: 1em;
 }
 
-button{
+.create-new{
     position: relative;
     top: 40%;
     background-color: #274C77;
     color: #E7ECEF;
     font-size: 3em;
-    width: 25%;
+    width: 1.2em;
     text-align: center;
     border-radius: 1em;
 }
