--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,10 @@
     border:#274C77;
     border-width: 5px;
     border-style: solid;
-    justify-content: center;
+    width: 80%;
+    height: 30em;
+    margin: auto;
+    margin-top: 15vh;
 }
 
 .log-wrapper{
