--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 .back-button{
   background-color: #274C77;
   color: white;
-
+  margin: 1em;
 }
 
 /* For index.html (Home Page) */
@@ -138,10 +138,33 @@ button {
 /* page 2: (New Log Page) */
 
 .Log {
-  position: relative;
+    gap: 0px 0px; 
+    border:#274C77;
+    border-width: 5px;
+    border-style: solid;
+    width: 80%;
+    height: 85vh;
+    margin: auto;
+    margin-top: 5vh;
+    min-width: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden
+}
+.banner-container {
+  background-image: url('./main-photo.jpg') ;  margin-bottom: 20px;
+  overflow: hidden;
+  padding: 1em 0 1em 1em;
+  margin-bottom: 0;
 }
 
-.edit-page-btn {
+.box{
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding-right: 2em;
+}
+
+/* .edit-page-btn {
   position: absolute;
   top: 15px;
   right: 15px;
@@ -150,15 +173,15 @@ button {
   padding: 6px 12px;
   cursor: pointer;
   color: #000;
-}
+} */
 
-.top-section {
+/* .top-section {
   display: flex;
   justify-content: space-between;
   gap: 20px;
   margin-top: 60px;
-}
-
+} */
+/* 
 .title-wrapper {
   display: flex;
   flex-direction: column;
@@ -171,10 +194,18 @@ button {
   color: #000;
   font-family: inherit;
   padding: 0;
-}
-
+} */
+/* 
 .title-wrapper input::placeholder {
   color: #000;
+} */
+
+.banner-content{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  background-color: transparent;
+  gap: 6px;
 }
 
 .trip-title {
@@ -263,6 +294,5 @@ button {
   border: 1px solid #000;
   background: none;
   cursor: pointer;
-  margin-top: 20px;
   color: #000;
 }
