Landing Page CSS

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@
 /* For index.html (Home Page) */
 * {
   font-family: "Courier New", Courier, monospace;
-  background-color: #e7ecef;
+}
+
+body{
+    background-color: #040513;
 }
 
 
@@ -22,6 +25,7 @@
         ". log-wrapper new-log-wrapper"
         ". . ."; 
     border:5px solid #274C77;
+    border-radius: 50px 50px 50px 0;
     width: 80%;
     height: 30em;
     margin: auto;
@@ -33,8 +37,12 @@
   grid-area: log-wrapper;
   border-top: #274c77;
   border-top-style: solid;
-  border-width: 0.2em;
+  border-width: 1em;
   padding: 5px;
+  overflow-x: hidden;
+  scrollbar-color: #bed2e9 #274C77;
+  scrollbar-width: thin;
+  background-color:#274C77;
 }
 
 .new-log-wrapper {
@@ -44,32 +52,46 @@
   border-left: #274c77;
   border-left-style: solid;
   border-width: 0.4em;
+  border-radius: 0 40px 40px 0;
+  background-color:#274C77;
 }
 
 .title {
   grid-area: title;
-  padding-left: 1em;
+  color:#274C77;
+  width: 100%;
+  border-radius: 45px 0 0 0;
+  background-color: #bed2e9;
+}
+
+h1{
+  color:#274C77;
+  background-color: transparent;
+  font-size: 2.7em;
+  font-size: #bed2e9;
+  margin-left: 40%;
+  font-family: 'Lucida Console', Courier, monospace;
 }
 
 .create-new {
   position: relative;
   top: 40%;
-  background-color: #274c77;
-  color: #e7ecef;
+  background-color: #bed2e9;
+  color: #274C77;
+  border-color: transparent;
   font-size: 3em;
   width: 1.2em;
   text-align: center;
   border-radius: 1em;
+  transition: .3s;
 }
 
 .create-new:hover {
-  background-color: rgb(87, 20, 15);
-  transition: 0.3s;
-}
-
-.log-wrapper {
-  grid-area: log-wrapper;
-  overflow: scroll;
+  background-color: rgb(51, 118, 173);
+  color: #bed2e9;
+  width: 2em;
+  cursor: pointer;
+  transition: .3s ease-in-out;
 }
 button {
   margin: auto;
@@ -89,7 +111,13 @@ button {
   min-width: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
+  background-color: #bed2e9;
 }
+
+input{
+  background-color: #bed2e9;
+}
+
 .banner-container {
   background-image: url("./main-photo.jpg");
   margin-bottom: 20px;
@@ -98,11 +126,16 @@ button {
   margin-bottom: 0;
 }
 
+h2, p, button{
+  background-color: #bed2e9;
+}
+
 .box {
   width: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   padding-right: 2em;
+  background-color: #bed2e9;
 }
 
 /* .edit-page-btn {
@@ -185,6 +218,7 @@ button {
   color: #000;
   padding: 8px;
   font-family: inherit;
+  background-color: #bed2e9;
 }
 
 .photos-box {
@@ -194,6 +228,7 @@ button {
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 10px;
+  background-color: #bed2e9;
 }
 
 .photos-box::-webkit-scrollbar {
@@ -219,6 +254,7 @@ button {
   height: 100px;
   object-fit: cover;
   display: block;
+  background-color: #bed2e9;
 }
 
 .add-more-photos-btn {
