--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,40 @@ textarea {
   color: #274c77;
 }
 
+.add-item{
+  background-color: #bed2e9;
+  border-radius: 100%;
+  width: 3em;
+  height: 3em;
+  border-color: transparent;
+  padding: 0;
+  margin-top: 1em;
+  color: #274c77;
+  transition: .3s;
+}
+
+.add-item:hover{
+  background-color: #274c77;
+  color: #bed2e9;
+  transition: .3s ease-in-out;
+}
+
+.location-button{
+  background-color: #bed2e9;
+  border-radius: 20px;
+  border-color: transparent;
+  padding: 5px 10px 5px 10px;
+  margin-top: 1em;
+  color: #274c77;
+  transition: .3s;
+}
+
+.location-button:hover{
+  background-color: #274c77;
+  color: #bed2e9;
+  transition: .3s ease-in-out;
+}
+
 .data-input {
   font-size: 1.3em;
   width: 90%;
@@ -226,42 +260,6 @@ textarea {
   overflow-y: hidden;
   overflow-x: hidden;
 }
-
-/* .edit-page-btn {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  background: none;
-  border: 1px solid #000;
-  padding: 6px 12px;
-  cursor: pointer;
-  color: #000;
-} */
-
-/* .top-section {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  margin-top: 60px;
-} */
-/* 
-.title-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.title-wrapper input {
-  background: none;
-  border: none;
-  color: #000;
-  font-family: inherit;
-  padding: 0;
-} */
-/* 
-.title-wrapper input::placeholder {
-  color: #000;
-} */
 
 .banner-content {
   display: flex;
@@ -383,6 +381,35 @@ h2 {
   overflow: hidden;
 }
 
+.photo-selected {
+  outline: 3px solid rgb(51, 118, 173);
+  outline-offset: 2px;
+}
+
+.delete-photo-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.checklist-delete-btn {
+  background-color: rgb(51, 118, 173);
+  color: #bed2e9;
+  border-color: transparent;
+  border-radius: 100%;
+  width: 2em;
+  height: 2em;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.checklist-delete-btn:hover {
+  background-color: #050827;
+  color: #bed2e9;
+  transition: 0.3s ease-in-out;
+}
+
+
 /* for page3: (View Log Page) */
 
 .edit-log,
@@ -467,35 +494,6 @@ h2 {
   height: 20em;
   padding: 1em 1em 1em 1em;
   white-space: pre-line;
-}
-
-/* New css*/
-.photo-selected {
-  outline: 3px solid rgb(51, 118, 173);
-  outline-offset: 2px;
-}
-
-.delete-photo-btn:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.checklist-delete-btn {
-  background-color: rgb(51, 118, 173);
-  color: #bed2e9;
-  border-color: transparent;
-  border-radius: 100%;
-  width: 2em;
-  height: 2em;
-  margin-left: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.checklist-delete-btn:hover {
-  background-color: #050827;
-  color: #bed2e9;
-  transition: 0.3s ease-in-out;
 }
 
 /* Media Queries 
